[gd_scene load_steps=12 format=3 uid="uid://tvw6cc1s25s6"]

[ext_resource type="Script" uid="uid://c7ynsnr6odvgx" path="res://components/weapons/laser_gun/laser_gun.gd" id="1_itxth"]
[ext_resource type="PackedScene" uid="uid://cb2roqwnqe0al" path="res://components/hitbox/hit_box.tscn" id="2_nabbg"]
[ext_resource type="Script" uid="uid://3wtv26ldj4iu" path="res://effects/effect_res.gd" id="3_vakgf"]
[ext_resource type="Script" uid="uid://bgho0nn52h27q" path="res://effects/one_hit_damage_res.gd" id="4_chtpo"]
[ext_resource type="PackedScene" uid="uid://c03aqukr6wrum" path="res://components/ranger_activator/range_activator.tscn" id="5_nabbg"]

[sub_resource type="Resource" id="Resource_sqvtg"]
script = ExtResource("4_chtpo")
damage = 50
metadata/_custom_type_script = "uid://bgho0nn52h27q"

[sub_resource type="SegmentShape2D" id="SegmentShape2D_ytm24"]
b = Vector2(1000, 0)

[sub_resource type="Animation" id="Animation_sqvtg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dwadg"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dnubw"]
_data = {
&"RESET": SubResource("Animation_sqvtg"),
&"hit": SubResource("Animation_dwadg")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_nabbg"]
radius = 1000.0

[node name="LaserGun" type="Node2D"]
script = ExtResource("1_itxth")

[node name="HitBox" parent="." instance=ExtResource("2_nabbg")]
monitoring = false
effects = Array[ExtResource("3_vakgf")]([SubResource("Resource_sqvtg")])

[node name="ColorRect" type="ColorRect" parent="HitBox"]
offset_top = -2.0
offset_right = 1000.0
offset_bottom = 2.0
pivot_offset = Vector2(0, 2)
color = Color(0.91227055, 4.7168137e-06, 6.738305e-07, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("SegmentShape2D_ytm24")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dnubw")
}

[node name="RangeActivator" parent="." instance=ExtResource("5_nabbg")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RangeActivator"]
shape = SubResource("CircleShape2D_nabbg")

[connection signal="activate" from="RangeActivator" to="." method="_on_range_activator_activate"]
